--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^4.20.0",
     "gatsby-plugin-google-analytics": "^4.20.0",
+    "gatsby-plugin-html-attributes": "^1.0.5",
     "gatsby-plugin-image": "^2.20.0",
     "gatsby-plugin-mdx": "^3.20.0",
     "gatsby-plugin-sass": "^5.20.0",
